--- a/src/groupprojectmusic/groupMenu.form
+++ b/src/groupprojectmusic/groupMenu.form
@@ -108,6 +108,9 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="btnMusic">
               <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="99" green="99" red="ff" type="rgb"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="MUSIC"/>
               </Properties>
               <Events>
@@ -134,6 +137,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Short Video"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnShortActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnTiktok">
               <Properties>
@@ -170,7 +176,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="The Bold Font" size="24" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="              MAIN MENU"/>
+                <Property name="text" type="java.lang.String" value="  MUSIC &amp; VIDEO MENU"/>
               </Properties>
             </Component>
           </SubComponents>
